Merging arquillian branch: - [JBWS-3668] Arquillian integration - new build