@@ -72,33 +72,107 @@
       </activation>
       <build>
         <plugins>
-          <plugin> <!-- This copies jbossws-cxf-factories jar to endorsed dir before the integration-tests are run -->
-            <artifactId>maven-resources-plugin</artifactId>
+
+            <plugin>
+                <groupId>org.codehaus.gmaven</groupId>
+                <artifactId>gmaven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>testsuite-default</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>execute</goal>
+                        </goals>
+                        <configuration>
+                            <source>${basedir}/src/test/scripts/jbws_testsuite_spring_default.groovy</source>
+                            <properties>
+                                <inputFile>${jboss.home}/standalone/configuration/standalone-full.xml</inputFile>
+                                <outputFile>${jboss.home}/standalone/configuration/jbws-testsuite-spring-default.xml</outputFile>
+                                <serverLog>jbws-testsuite-spring-default.log</serverLog>
+                                <usersPropFile>${project.build.directory}/test-classes/jbossws-users.properties</usersPropFile>
+                                <rolesPropFile>${project.build.directory}/test-classes/jbossws-roles.properties</rolesPropFile>
+                                <keystorePath>${project.build.directory}/test-classes/test.keystore</keystorePath>
+                                <testResourcesDir>${project.build.directory}/test-resources</testResourcesDir>
+
+                               <srcUsersProperties>${project.build.directory}/test-classes/application-users.properties</srcUsersProperties>
+                               <destUsersProperties>${jboss.home}/standalone/configuration/application-users.properties</destUsersProperties>
+                               <srcRolesProperties>${project.build.directory}/test-classes/application-roles.properties</srcRolesProperties>
+                               <destRolesProperties>${jboss.home}/standalone/configuration/application-roles.properties</destRolesProperties>
+                            </properties>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+
+
+            <!-- This copies jbossws-cxf-factories jar to endorsed dir before the integration-tests are run -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
             <executions>
-              <execution>
-                <id>copy-factories-jar</id>
-                <phase>pre-integration-test</phase>
-                <goals>
-                  <goal>copy-resources</goal>
-                </goals>
-                <configuration>
-                  <outputDirectory>${project.build.directory}/endorsed</outputDirectory>
-                  <resources>
-                    <resource>
-                      <directory>${basedir}/../../endorsed/target/</directory>
-                      <includes>
-                        <include>jbossws-cxf-factories-${project.version}.jar</include>
-                      </includes>
-                    </resource>
-                  </resources>
-                </configuration>
-              </execution>
+                <execution>
+            		<id>copy-endorsed</id>
+            		<phase>pre-integration-test</phase>
+            		<goals>
+            			<goal>copy</goal>
+            		</goals>
+            		<configuration>
+            			<artifactItems>
+            				<artifactItem>
+            					<groupId>org.jboss.ws.cxf</groupId>
+            					<artifactId>jbossws-cxf-factories</artifactId>
+            					<version>${project.version}</version>
+            				</artifactItem>
+            			</artifactItems>
+            			<outputDirectory>target/endorsed</outputDirectory>
+            		</configuration>
+            	</execution>
             </executions>
           </plugin>
         </plugins>
       </build>
     </profile>
-    
+
+
+      <!-- When the 'fast' profile is on, the testsuite runs in parallel mode; Arquillan messes up with containers in such a scenario, unless they're started upfront.
+           So we start all the containers specified in the arquillan.xml configuration -->
+     <profile>
+        <id>fast</id>
+        <build>
+           <plugins>
+              <plugin>
+                 <groupId>org.wildfly.plugins</groupId>
+                 <artifactId>wildfly-maven-plugin</artifactId>
+                 <executions>
+                    <execution>
+                       <id>jboss</id>
+                       <phase>pre-integration-test</phase>
+                       <goals>
+                          <goal>start</goal>
+                       </goals>
+                       <configuration>
+                          <jvmArgs>-server -XX:+UseCompressedOops -Xms64m -Xmx512m -XX:MaxPermSize=256m -Djboss.socket.binding.port-offset=${port-offset.cxf-spring-tests.jboss} ${additionalJvmArgs}</jvmArgs>
+                          <serverConfig>jbws-testsuite-spring-default.xml</serverConfig>
+                          <jbossHome>${jboss.home}</jbossHome>
+                          <port>39990</port><!-- Keep in sync with the port-offset -->
+                       </configuration>
+                    </execution>
+                    <execution>
+                       <id>jboss-shutdown</id>
+                       <phase>post-integration-test</phase>
+                       <goals>
+                          <goal>shutdown</goal>
+                       </goals>
+                       <configuration>
+                          <port>39990</port><!-- Keep in sync with the port-offset -->
+                       </configuration>
+                    </execution>
+                 </executions>
+              </plugin>
+              </plugins>
+          </build>
+      </profile>
   </profiles>
   
 </project>
